--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -18,10 +18,10 @@
                     <img class="img-profile rounded-circle" src={ProfilePic} />
                 </a>
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">
+                    <plug-link class="dropdown-item" href="/auth/profile">
                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                         <span>Profile</span>
-                    </a>
+                    </plug-link>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="javascript:;" on-click={this.logout}>
                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
