--- a/src/components/ui-kit/UIKit.html
+++ b/src/components/ui-kit/UIKit.html
@@ -1,11 +1,13 @@
 <template>
     <div>
         <div>
-            <mat-button class="btn default">Default</mat-button>
-            <mat-button class="btn primary">Primary</mat-button>
-            <mat-button class="btn default outline">Default</mat-button>
-            <mat-button class="btn primary outline">Primary</mat-button>
-            <mat-input placeholder="hello world" />
+            <button mat:button>Default</button>
+            <button mat:button-primary>Primary</button>
+
+            <button mat:button-outline>Default outline</button>
+            <button mat:button-primary-outline>Primary outline</button>
+
+            <input mat:input placeholder="Sample input" />
         </div>
         <div>
             <mat-card>
