--- a/src/components/ui-kit/UIKit.html
+++ b/src/components/ui-kit/UIKit.html
@@ -65,8 +65,17 @@
 
         <div>
             <h1>Checkbox</h1>
-
-            <input mat:checkbox="Hello World" type="checkbox" />
+            <input mat:checkbox="Checkbox" />
+            <input mat:checkbox-primary="Checkbox" />
+            <input mat:checkbox-danger="Checkbox" />
+            <input mat:checkbox-success="Checkbox" />
+        </div>
+        <div>
+            <h1>Radio</h1>
+            <input mat:radio="Radio" name="rad" />
+            <input mat:radio-primary="Radio" name="rad" />
+            <input mat:radio-danger="Radio" name="rad" />
+            <input mat:radio-success="Radio" name="rad" />
         </div>
 
 
