--- a/src/components/ui-kit/UIKit.html
+++ b/src/components/ui-kit/UIKit.html
@@ -78,26 +78,26 @@
             <input mat:radio-success="Radio" name="rad" />
         </div>
 
+        <div>
+            <h1>Chip</h1>
+            <div>
+                <mat-chip>Chip</mat-chip>
+                <mat-chip type="primary">Chip</mat-chip>
+                <mat-chip type="danger">Chip</mat-chip>
+                <mat-chip type="success">Chip</mat-chip>
+            </div>
+            <div>
+                <mat-chip prop:close={this.close}>Chip</mat-chip>
+                <mat-chip type="primary" prop:close={this.close}>Chip</mat-chip>
+                <mat-chip type="danger" prop:close={this.close}>Chip</mat-chip>
+                <mat-chip type="success" prop:close={this.close}>Chip</mat-chip>
+            </div>
+        </div>
 
-        <h1>Inputs</h1>
-
-        <input mat:input placeholder="Sample input" />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div>
+            <h1>Inputs</h1>
+            <input mat:input placeholder="Sample input" />
+        </div>
     </div>
 </template>
 
@@ -107,6 +107,9 @@
         clickMe() {
             this.badge = this.badge + 1;
             console.log('hello');
+        }
+        close(data) {
+            console.log(data);
         }
     }
 </script>
