added sample single file and multiple file component

--- a/src/app/root.component.html
+++ b/src/app/root.component.html
@@ -2,5 +2,7 @@
   <div>
     <h1>Hello World {this.counter}</h1>
     <button on:click={this.clickMe}>I am a button</button>
+    <br />
+    <app-single-file-component></app-single-file-component>
   </div>
 </template>
